Fixed yaml file in swgger
